# llm-context-engineering-playbook

./: .gitignore  README-pt.md  README.md  ci.yml  pyproject.toml
docs/contracts/: action_mode.md  cross_system_impact.md  graph_navigation.md  investigative_audit.md  project_placement.md  promotion_and_closure.md  raw_handling.md
docs/method/: 00_problem.md  01_principles.md  02_workflow.md  03_failure_modes.md  04_case_study.md  05_adversarial_review.md
docs/templates/: frontmatter_schema.md  investigative_audit_record.md  operational_record.md  semantic_validation_record.md
docs/templates/project_canonical/: 00_overview.md  01_plan.md  README.md
evals/: README.md  examples.md  manual_protocol.md  scenarios.json  score_outputs.py
evals/runs/baseline/: context_retrieval.md  cross_system_impact.md  investigative_audit.md  raw_leakage.md  unsafe_promotion.md
evals/runs/playbook/: context_retrieval.md  cross_system_impact.md  investigative_audit.md  raw_leakage.md  unsafe_promotion.md
examples/synthetic_saas/docs/_registry/: knowledge_index.generated.json  validate_report.generated.json
examples/synthetic_saas/docs/projects/billing/refund_pipeline/: 00_overview.md  01_plan.md  04_validation.md  README.md
examples/synthetic_saas/docs/projects/billing/refund_pipeline/contracts/: refund_cross_system_contract.md
src/context_governance/: __init__.py  cli.py  discover.py  frontmatter.py  model.py  registry.py  validate.py
tests/: test_example_workflow.py  test_frontmatter.py
(+1 files in other folders)
