[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-context-engineering-playbook"
version = "0.1.0"
description = "A small governance layer for LLM-assisted project context."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
context-governance = "context_governance.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
  ".git",
  ".pytest_cache",
  "__pycache__",
  "pytest-cache-files-*",
  "docs/_registry",
  "examples/**/docs/_registry",
]
